back to main menu

--- a/WaveAttack/Base.lproj/Main.storyboard
+++ b/WaveAttack/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
             <objects>
                 <viewController title="Settings" id="pSS-8t-klj" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="LDy-nQ-frk"/>
-                        <viewControllerLayoutGuide type="bottom" id="2Hc-Bk-rlW"/>
+                        <viewControllerLayoutGuide type="top" id="CS3-iO-Mg0"/>
+                        <viewControllerLayoutGuide type="bottom" id="usu-oo-19r"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Wc3-iC-KIc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bv-rN-3WH">
@@ -22,7 +22,7 @@
                                 <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="ldy-d3-MCc" kind="show" id="ZLl-SO-o4e"/>
+                                    <segue destination="ldy-d3-MCc" kind="presentation" id="ZLl-SO-o4e"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -31,25 +31,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HTh-54-sHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1035" y="892"/>
+            <point key="canvasLocation" x="-1035" y="891.99999999999989"/>
         </scene>
         <!--Pets-->
         <scene sceneID="kQU-TQ-8Wf">
             <objects>
                 <viewController title="Pets" id="jNb-UK-ayV" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BeA-Dg-2C4"/>
-                        <viewControllerLayoutGuide type="bottom" id="m7P-YR-J99"/>
+                        <viewControllerLayoutGuide type="top" id="w2e-hj-Aum"/>
+                        <viewControllerLayoutGuide type="bottom" id="dfE-uP-th8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="XFf-h5-0gW">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6zb-NZ-6Q8">
                                 <rect key="frame" x="0.0" y="0.0" width="70" height="35"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="ldy-d3-MCc" kind="show" id="kWy-7Z-y26"/>
+                                    <segue destination="ldy-d3-MCc" kind="presentation" id="kWy-7Z-y26"/>
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2IP-Ky-9BH">
@@ -79,28 +79,35 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F0T-wb-8Y7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-341" y="1400"/>
+            <point key="canvasLocation" x="-341" y="1399.9999999999998"/>
         </scene>
         <!--Menu-->
         <scene sceneID="gea-Rb-FhN">
             <objects>
-                <viewController title="Menu" id="ldy-d3-MCc" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainMenu" title="Menu" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ldy-d3-MCc" customClass="MainMenuController" customModule="WaveAttack" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="QwF-NN-3MG"/>
-                        <viewControllerLayoutGuide type="bottom" id="x8z-4N-jFt"/>
+                        <viewControllerLayoutGuide type="top" id="evx-el-ykt"/>
+                        <viewControllerLayoutGuide type="bottom" id="SbQ-ws-s9a"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dB1-aR-uYC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1o-My-tap">
-                                <rect key="frame" x="248" y="109" width="105" height="30"/>
+                                <rect key="frame" x="135" y="144" width="105" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="TESTFIELD">
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BV1-FR-VrT" kind="show" id="Oyo-Q3-qAM"/>
+                                    <segue destination="BV1-FR-VrT" kind="presentation" id="Oyo-Q3-qAM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJb-zx-eIw">
+                                <rect key="frame" x="164" y="261" width="46" height="30"/>
+                                <state key="normal" title="Pets"/>
+                                <connections>
+                                    <segue destination="jNb-UK-ayV" kind="presentation" id="cPJ-5z-7qc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s84-hR-ek6">
@@ -108,40 +115,46 @@
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Settings"/>
                                 <connections>
-                                    <segue destination="pSS-8t-klj" kind="show" id="oyj-As-8bq"/>
+                                    <segue destination="pSS-8t-klj" kind="presentation" id="oyj-As-8bq"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJb-zx-eIw">
-                                <rect key="frame" x="277" y="228" width="46" height="30"/>
-                                <state key="normal" title="Pets"/>
-                                <connections>
-                                    <segue destination="jNb-UK-ayV" kind="show" id="cPJ-5z-7qc"/>
-                                </connections>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1n-UB-ZTN">
+                                <rect key="frame" x="164" y="77" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.96078437566757202" green="0.71764707565307617" blue="0.61568629741668701" alpha="1" colorSpace="deviceRGB"/>
                     </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="375" height="667"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="simpleLabel" destination="K1n-UB-ZTN" id="CvB-IC-Q9W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROv-ba-y8Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-507" y="79"/>
+            <point key="canvasLocation" x="-461.5" y="112.49999999999999"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="WaveAttack" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
-                        <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
+                        <viewControllerLayoutGuide type="top" id="IbA-fs-xbq"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zyy-Ij-dDl"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="492.1875" y="221.30281690140845"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
