--- a/WaveAttack/Base.lproj/Main.storyboard
+++ b/WaveAttack/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Settings-->
@@ -93,32 +94,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1o-My-tap">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1o-My-tap">
                                 <rect key="frame" x="135" y="144" width="105" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="TESTFIELD">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="105" id="UGh-yJ-5Sm"/>
+                                </constraints>
+                                <state key="normal" title="Missions">
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BV1-FR-VrT" kind="presentation" id="Oyo-Q3-qAM"/>
+                                    <segue destination="8sd-oI-tTM" kind="show" id="T5y-Nv-A51"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJb-zx-eIw">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJb-zx-eIw">
                                 <rect key="frame" x="164" y="261" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="dZa-ng-Bij"/>
+                                </constraints>
                                 <state key="normal" title="Pets"/>
                                 <connections>
                                     <segue destination="jNb-UK-ayV" kind="presentation" id="cPJ-5z-7qc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s84-hR-ek6">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s84-hR-ek6">
                                 <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="qrm-eK-TT8"/>
+                                </constraints>
                                 <state key="normal" title="Settings"/>
                                 <connections>
                                     <segue destination="pSS-8t-klj" kind="presentation" id="oyj-As-8bq"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1n-UB-ZTN">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1n-UB-ZTN">
                                 <rect key="frame" x="164" y="77" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -126,6 +136,17 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.96078437566757202" green="0.71764707565307617" blue="0.61568629741668701" alpha="1" colorSpace="deviceRGB"/>
+                        <constraints>
+                            <constraint firstItem="K1n-UB-ZTN" firstAttribute="top" secondItem="evx-el-ykt" secondAttribute="bottom" constant="57" id="1hO-m2-gBE"/>
+                            <constraint firstItem="vJb-zx-eIw" firstAttribute="top" secondItem="B1o-My-tap" secondAttribute="bottom" constant="87" id="AuQ-f8-KdI"/>
+                            <constraint firstItem="vJb-zx-eIw" firstAttribute="centerX" secondItem="dB1-aR-uYC" secondAttribute="centerX" id="GOv-lK-7IW"/>
+                            <constraint firstItem="SbQ-ws-s9a" firstAttribute="top" secondItem="s84-hR-ek6" secondAttribute="bottom" constant="597" id="Pu9-pj-muh"/>
+                            <constraint firstItem="s84-hR-ek6" firstAttribute="leading" secondItem="dB1-aR-uYC" secondAttribute="leading" id="TkX-Qu-bnF"/>
+                            <constraint firstItem="vJb-zx-eIw" firstAttribute="centerX" secondItem="B1o-My-tap" secondAttribute="centerX" id="cWQ-wa-Twe"/>
+                            <constraint firstItem="K1n-UB-ZTN" firstAttribute="leading" secondItem="vJb-zx-eIw" secondAttribute="leading" id="jOC-iH-H1t"/>
+                            <constraint firstItem="B1o-My-tap" firstAttribute="top" secondItem="K1n-UB-ZTN" secondAttribute="bottom" constant="46" id="qr7-rt-n9i"/>
+                            <constraint firstItem="s84-hR-ek6" firstAttribute="top" secondItem="dB1-aR-uYC" secondAttribute="top" id="vH7-Nz-BvQ"/>
+                        </constraints>
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="667"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
@@ -138,26 +159,89 @@
             </objects>
             <point key="canvasLocation" x="-461.5" y="112.49999999999999"/>
         </scene>
+        <!--MissionsList-->
+        <scene sceneID="kcM-eg-xyH">
+            <objects>
+                <viewController title="MissionsList" id="8sd-oI-tTM" customClass="MissionsController" customModule="WaveAttack" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nhC-NL-LBj"/>
+                        <viewControllerLayoutGuide type="bottom" id="EfM-wb-uhA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oJS-Fs-Ze7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IIv-Py-iF1">
+                                <rect key="frame" x="26" y="20" width="34" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="ldy-d3-MCc" kind="show" id="9ri-NQ-uzI"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9fd-eC-vLk">
+                                <rect key="frame" x="43" y="131" width="281" height="362"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LabelCell" textLabel="qBl-E5-KsE" style="IBUITableViewCellStyleDefault" id="L1O-0i-AQL">
+                                        <rect key="frame" x="0.0" y="28" width="281" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="L1O-0i-AQL" id="YxZ-id-Xdt">
+                                            <rect key="frame" x="0.0" y="0.0" width="281" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qBl-E5-KsE">
+                                                    <rect key="frame" x="15" y="0.0" width="251" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="8sd-oI-tTM" id="bNP-2B-wQi"/>
+                                    <outlet property="delegate" destination="8sd-oI-tTM" id="X9M-Lh-fLy"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IIv-Py-iF1" firstAttribute="top" secondItem="nhC-NL-LBj" secondAttribute="bottom" id="Atm-89-U3q"/>
+                            <constraint firstItem="9fd-eC-vLk" firstAttribute="top" secondItem="IIv-Py-iF1" secondAttribute="bottom" constant="81" id="HXk-Ce-6mT"/>
+                            <constraint firstItem="IIv-Py-iF1" firstAttribute="leading" secondItem="oJS-Fs-Ze7" secondAttribute="leadingMargin" constant="10" id="KqP-Ic-fxg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9fd-eC-vLk" secondAttribute="trailing" constant="35" id="fuy-gg-DVy"/>
+                            <constraint firstItem="9fd-eC-vLk" firstAttribute="leading" secondItem="oJS-Fs-Ze7" secondAttribute="leadingMargin" constant="27" id="hni-Fn-X6f"/>
+                            <constraint firstItem="EfM-wb-uhA" firstAttribute="top" secondItem="9fd-eC-vLk" secondAttribute="bottom" constant="174" id="rep-OR-amT"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="331-gf-iAh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-80.5" y="-1075.5"/>
+        </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="WaveAttack" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Game" id="BV1-FR-VrT" customClass="GameViewController" customModule="WaveAttack" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IbA-fs-xbq"/>
                         <viewControllerLayoutGuide type="bottom" id="Zyy-Ij-dDl"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="492.1875" y="221.30281690140845"/>
+            <point key="canvasLocation" x="497.5" y="418.5"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="kWy-7Z-y26"/>
+        <segue reference="9ri-NQ-uzI"/>
     </inferredMetricsTieBreakers>
 </document>
