--- a/WaveAttack/Base.lproj/Main.storyboard
+++ b/WaveAttack/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="8sd-oI-tTM" kind="show" id="T5y-Nv-A51"/>
+                                    <segue destination="8sd-oI-tTM" kind="showDetail" id="T5y-Nv-A51"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vJb-zx-eIw">
@@ -175,7 +175,7 @@
                                 <rect key="frame" x="26" y="20" width="34" height="30"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
-                                    <segue destination="ldy-d3-MCc" kind="show" id="9ri-NQ-uzI"/>
+                                    <segue destination="ldy-d3-MCc" kind="showDetail" id="9ri-NQ-uzI"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9fd-eC-vLk">
@@ -217,10 +217,13 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <segue destination="BV1-FR-VrT" kind="showDetail" identifier="ToGame" id="ztH-qA-WNv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="331-gf-iAh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-80.5" y="-1075.5"/>
+            <point key="canvasLocation" x="85.5" y="-775.5"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -231,10 +234,13 @@
                         <viewControllerLayoutGuide type="bottom" id="Zyy-Ij-dDl"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="8sd-oI-tTM" kind="showDetail" identifier="BackToMissions" id="YZd-o6-UAc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
@@ -242,6 +248,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="9ri-NQ-uzI"/>
+        <segue reference="ZLl-SO-o4e"/>
+        <segue reference="T5y-Nv-A51"/>
     </inferredMetricsTieBreakers>
 </document>
